Fix background on dialog element in dark mode
[Issue] #1143
[Problem] Dialog list wasn't visible in dark mode (white background)
[Solution] Define background color dependant from theme

--- a/src/css/profile/mobile/common/listview.less
+++ b/src/css/profile/mobile/common/listview.less
@@ -786,7 +786,7 @@ tau-expandable {
 	}
 	// not colored listview (backward compatibility)
 	&[data-colored-background='false'] {
-		background-color: #ffffff;
+		background-color: var(--background-area-color);
 		li:not(.ui-group-index) {
 			border-bottom: 2 * @unit_base solid rgba(230, 230, 230, 1);
 			box-sizing: border-box;
